# tracking_arm

./: .env  .gitignore  env_loader.py  requirements.txt
docs/: README.md
ws/src/bringup_py/: package.xml  setup.py
ws/src/bringup_py/config/: domain_bridge_arm_cmd.yaml
ws/src/bringup_py/launch/: jetcobot_arm.launch.py  pc_client.launch.py  tracking_bringup.launch.py
ws/src/jetcobot_control_py/: package.xml  setup.cfg  setup.py
ws/src/jetcobot_control_py/jetcobot_control_py/: __init__.py  jet_cobot_udp_node.py
ws/src/jetcobot_control_py/resource/: jetcobot_control_py
ws/src/object_tracker_py/: package.xml  setup.cfg  setup.py
ws/src/object_tracker_py/object_tracker_py/: angle_publisher.py  app.py  arm_cmd_node.py  detector.py  flask_webcam_client.py  flask_webcam_server.py  follow_one.py  udp_receiver.py  udp_streamer_node.py
ws/src/perception_py/: package.xml  setup.cfg  setup.py
ws/src/perception_py/perception_py/: hand_tracker_node.py
ws/src/tracking_arm_interfaces/: CMakeLists.txt  package.xml
ws/src/tracking_control_py/: package.xml  setup.cfg  setup.py
ws/src/tracking_control_py/tracking_control_py/: arm_follower_array.py  arm_follower_node.py  follow_node.py  motion_test_node.py
