<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetcobot_control_py</name>
  <version>0.0.0</version>
  <description>Minimal node that opens MyCobot connection and streams camera frames over UDP.</description>
  <maintainer email="kdbswo@gmail.com">addinedu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>opencv_python</exec_depend>
  <exec_depend>pymycobot</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
